add nilai model, and pip clean-up (linting error)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\muhammadteguh\\.virtualenvs\\smk-exam\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\muhammadteguh\\.virtualenvs\\smk-exam\\Scripts\\python.exe",
+    "python.linting.enabled": false
 }
